# aichampions

./: .devenv.flake.nix  .gitignore  README.md  Unit 1.ipynb  aisay.ipynb  devenv.nix  pyproject.toml  week06-part02.ipynb  week_02.ipynb  week_04_part_02_build_rag.ipynb  week_04_part_1.ipynb  week_05_part_1.ipynb  week_05_part_2.ipynb
.devenv/: devenv.json  input-paths.txt  load-exports  nix-eval-cache.db-shm  nix-eval-cache.db-wal  profile  run  tasks.db-shm  tasks.db-wal
.devenv/gc/: shell-1-link  shell-3-link  shell-5-link
.ipynb_checkpoints/: week_01-checkpoint.ipynb  week_02-checkpoint.ipynb
Week_02/: week_02.ipynb
Week_02/week_02/exports/: grade.json
Week_02/week_02/json/: courses.json  hdb_data.json
Week_02/week_02/municipal_feedback/: hdb-01.txt  hdb-02.txt  hdb-03.txt  sample-02.txt  sample-03.txt
Week_02/week_02/municipal_feedback/.ipynb_checkpoints/: sample-01-checkpoint.txt
Week_02/week_02/resources/: inflation_sg_categories.html
Week_03/: week_03_part_1.ipynb  week_03_part_2.ipynb
Week_04/: week_04_part_1.ipynb  week_04_part_2.ipynb
Week_04/.ipynb_checkpoints/: digital_products-checkpoint.csv  week_04_part_1-checkpoint.ipynb
Week_04/chroma_langchain_db/baf7a5e5-c7ef-4eb5-a594-ecb55b1790d6/: index_metadata.pickle
Week_04/notes/: 2. Key Parameters for LLMs.txt  4. Prompting Techniques for Builders.txt
Week_05/: week_05_part_1.ipynb
Week_05/.ipynb_checkpoints/: week_05_part_1-checkpoint.ipynb  week_05_part_2-checkpoint.ipynb
Week_05/notes/: 3. LLMs and Hallucinations.txt
Week_05/notes_rag/: 1. Overview - Plan of Attack.txt  2. Improving Pre-Retrieval Processes.txt  3. Improving Retrieval Processes.txt  4. Improving Post-Retrieval Processes.txt
Week_05/vector_db/: chroma.sqlite3
Week_06/: fake-cv.md  resume_full_stack_developer.txt  week_06_part_1.ipynb
Week_06/.ipynb_checkpoints/: week_06_part_2-checkpoint.ipynb
Week_07/: streamlit_test.py  week_07_part_1.ipynb  week_07_part_2.ipynb
Week_07/.ipynb_checkpoints/: week_07_part_1-checkpoint.ipynb  week_07_part_2-checkpoint.ipynb
Week_07/helper_functions/: llm.py
Week_07/logics/: customer_query_handler.py
Week_08/: week_08.ipynb
